--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
         </div>
         <div class="right  bg-[rgba(29,28,28,0.68)] rounded-lg"></div>
     </main>
-    <script src="script.js"></script>
+    <script src="https://prasan-mangrati.github.io/Websites/script.js"></script>
+
     <!-- <script src="play.js" defer></script> -->
 </body>
 
